--- a/package.json
+++ b/package.json
@@ -7,39 +7,23 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^0.19.1",
-    "core-js": "^3.4.4",
-    "jqwidgets-scripts": "^9.0.0",
-    "v-calendar": "^1.0.0-beta.23",
+    "animate.css": "^3.7.2",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
+    "core-js": "^3.4.3",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "reactstrap": "^8.4.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vue2-filters": "^0.9.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-router": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "vue-template-compiler": "^2.6.10"
-  },
-  "babel": {
-    "presets": [
-      "@vue/app"
-    ]
-  },
-  "eslintConfig": {
-    "root": true,
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ]
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  }
 }
