--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "reactstrap": "^8.4.0",
-    "vue": "^2.6.10",
+    "serve": "^10.1.2",
+    "vue": "^2.6.11",
     "vue-router": "^3.1.3",
-    "vue2-filters": "^0.9.1"
+    "vue2-filters": "^0.9.1",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
